--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-My GitHub Page
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <title>WIS2 Transition Guide</title>
+    </head>
+    <body>
+        <header>
+            <h1>WIS2 Transition Guide</h1>
+        </header>
+        <section id="transition-guide">
+            <h3>Draft transition guide documents</h3>
+            <ul>
+                <li><a href="transition-guide/wis2-transition-guide-DRAFT.html">HTML (online)</a></li>
+                <li><a href="transition-guide/wis2-transition-guide-DRAFT.pdf">PDF</a></li>
+                <li><a href="transition-guide/wis2-transition-guide-DRAFT.docx">Word</a></li>
+            </ul>
+        </section>
+        <hr>
+        <footer>
+            <a title="SC-IMT WMO Official website" href="https://community.wmo.int/en/governance/commission-membership/commission-observation-infrastructure-and-information-systems-infcom/commission-infrastructure-officers/infcom-management-group/standing-committee-information-management-and-technology-sc-imt">SC-IMT WMO Official website</a>
+        </footer>
+    </body>
+</html>
