--- a/transition-guide/wis2-transition-guide-DRAFT.html
+++ b/transition-guide/wis2-transition-guide-DRAFT.html
@@ -455,7 +455,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top" style="background-color: #FFFFFF;"><p class="tableblock"><strong class="big">World Meteorological Organization</strong></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top" style="background-color: #FFFFFF;"><p class="tableblock">Date: 2024-07-23</p></td>
+<td class="tableblock halign-left valign-top" style="background-color: #FFFFFF;"><p class="tableblock">Date: 2024-07-31</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top" style="background-color: #FFFFFF;"><p class="tableblock">Version: 2024-07-15-approved by EC-78</p></td>
@@ -691,7 +691,7 @@ During the transition period, in order to avoid some WIS centres being forced to
 <p>When a National Meteorological Centre (NMC), running a Message Switching System and exchanging data on the GTS, has implemented WIS2, it may wish to stop sending its data directly on the GTS so that it can stop the MSS.</p>
 </div>
 <div class="paragraph">
-<p>The WIS2 to GTS gateway will ensure that only the data currently available on the GTS and whose Member is wishing to stop its MSS will be re-published onto the GTS, so that no data is lost during the transition.</p>
+<p>For a Member that wishes to stop its MSS, the WIS2 to GTS gateway will ensure that only data currently available on the GTS will be re-published on the GTS, so that no data is lost during the transition.</p>
 </div>
 <div class="paragraph">
 <p>To ensure resilient operation, there will be more than one WIS2 to GTS gateway.</p>
@@ -708,7 +708,7 @@ During the transition period, in order to avoid some WIS centres being forced to
 <div class="sect4">
 <h5 id="_3_2_3_1_for_wis_centres_wishing_to_stop_their_message_switching_system"><a class="anchor" href="#_3_2_3_1_for_wis_centres_wishing_to_stop_their_message_switching_system"></a>3.2.3.1 For WIS centres wishing to stop their Message Switching System</h5>
 <div class="paragraph">
-<p>A Member planning to stop GTS transmission shall provide its data in conformance with WIS2 Node operations on WIS2. For data that have previously been available on the GTS, and should continue to be available on the GTS, the GTS Abbreviated Heading Line (AHL) of the bulletin in which the data are to be published needs to be indicated. This is done by including the GTS property in the WIS2 Notification Message (see example in the next paragraph).</p>
+<p>A Member planning to stop GTS transmission shall provide its data in conformance with WIS2 Node operations on WIS2. For data that have previously been available on the GTS, and should continue to be available on the GTS, the GTS Abbreviated Heading Line (AHL) of the bulletin in which the data are to be published needs to be indicated. This is done by including the <code>gts</code> property in the WIS2 Notification Message (see example in the next paragraph).</p>
 </div>
 <div class="paragraph">
 <p>The <code>gts</code> property enables the WIS2 to GTS gateway operator to easily identify data for republication on the GTS, and the AHL of the associated data. For example:</p>
@@ -746,7 +746,7 @@ During the transition period, in order to avoid some WIS centres being forced to
 <p>Over the transition period, the list of abbreviated headings (TTAAii/CCCC) to relay from WIS2 to GTS will grow when new NMCs plan to stop their MSS. It means that the gateway will require a method that allows for the addition of batches of abbreviated headings when new centres are ready for the transition.</p>
 </div>
 <div class="paragraph">
-<p>As it is expected for data consumers, and to ensure resilient operation, the gateway should subscribe to notification messages from multiple Global Brokers.</p>
+<p>To ensure resilient operation, the gateway should subscribe to notification messages from multiple Global Brokers.</p>
 </div>
 <div class="paragraph">
 <p>During the transition period, other gateways will republish GTS data to WIS2. These GTS to WIS2 gateways will publish via a designated <code>centre-id</code>. To avoid an infinite loop of republication, it is essential that a WIS2 to GTS gateway does not subscribe to notification messages associated with the centre-id of a GTS to WIS2 gateway.</p>
@@ -936,7 +936,7 @@ The <a href="https://library.wmo.int/idurl/4/55155"><em>Weather Reporting</em></
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-07-23 12:10:08 UTC
+Last updated 2024-07-31 15:46:13 UTC
 </div>
 </div>
 </body>
