update WIS2 Guide build

--- a/transition-guide/wis2-transition-guide-DRAFT.html
+++ b/transition-guide/wis2-transition-guide-DRAFT.html
@@ -455,7 +455,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top" style="background-color: #FFFFFF;"><p class="tableblock"><strong class="big">World Meteorological Organization</strong></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top" style="background-color: #FFFFFF;"><p class="tableblock">Date: 2024-08-13</p></td>
+<td class="tableblock halign-left valign-top" style="background-color: #FFFFFF;"><p class="tableblock">Date: 2024-09-03</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top" style="background-color: #FFFFFF;"><p class="tableblock">Version: 2024-07-15-approved by EC-78</p></td>
@@ -500,7 +500,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </li>
 <li><a href="#_4_stopping_a_message_switching_system">4. STOPPING A MESSAGE SWITCHING SYSTEM</a></li>
-<li><a href="#_5_management_of_wis2_and_gts">5. MANAGEMENT OF WIS2 AND GTS</a>
+<li><a href="#_5_management_of_wis1_and_gts">5. MANAGEMENT OF WIS1 AND GTS</a>
 <ul class="sectlevel2">
 <li><a href="#_5_1_maintenance_and_operation_of_message_switching_systems">5.1 Maintenance and operation of Message Switching Systems</a>
 <ul class="sectlevel3">
@@ -539,7 +539,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_preamble"><a class="anchor" href="#_preamble"></a>PREAMBLE</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The present publication establishes the provisions for the transition from the WMO Information System (WIS) 1.0 and the Global Telecommunication System (GTS) to WIS 2.0. The provisions for the WIS2 transition provide technical guidance and describe the practices to be followed by Members to implement WIS 2.0 and decommission the WIS 1.0 and GTS systems. The practices described in this publication facilitate a smooth implementation of the technical regulation described in the <a href="https://library.wmo.int/idurl/4/68731"><em>Manual on WMO Information System</em></a> (WMO-No. 1060), Volume II (hereinafter <em>Manual on WIS</em>, Volume II), and further explained in the <a href="https://library.wmo.int/idurl/4/28988"><em>Guide to the WMO Information System</em></a> (WMO-No. 1061), Volume II (hereinafter <em>Guide to WIS</em>, Volume II).</p>
+<p>The present publication establishes the provisions for the transition from the WMO Information System (WIS) 1.0 and the Global Telecommunication System (GTS) to WIS 2.0. The provisions for the WIS2 transition provide technical guidance and describe the practices to be followed by Members to implement WIS 2.0 and decommission the WIS 1.0 and GTS systems. The practices described in this publication facilitate a smooth implementation of the technical regulation described in the <a href="https://library.wmo.int/idurl/4/68731"><em>Manual on the WMO Information System</em></a> (WMO-No. 1060), Volume II (hereinafter <em>Manual on WIS</em>, Volume II), and further explained in the <a href="https://library.wmo.int/idurl/4/28988"><em>Guide to the WMO Information System</em></a> (WMO-No. 1061), Volume II (hereinafter <em>Guide to WIS</em>, Volume II).</p>
 </div>
 </div>
 </div>
@@ -691,7 +691,7 @@ During the transition period, in order to avoid some WIS centres being forced to
 <p>When a National Meteorological Centre (NMC), running a Message Switching System and exchanging data on the GTS, has implemented WIS2, it may wish to stop sending its data directly on the GTS so that it can stop the MSS.</p>
 </div>
 <div class="paragraph">
-<p>For a Member that wishes to stop its MSS, the WIS2 to GTS gateway will ensure that only data currently available on the GTS will be re-published on the GTS, so that no data is lost during the transition.</p>
+<p>For a Member that wishes to stop MSS, the WIS2 to GTS gateway will ensure that only data currently available on the GTS will be re-published on the GTS, so that no data is lost during the transition.</p>
 </div>
 <div class="paragraph">
 <p>To ensure resilient operation, there will be more than one WIS2 to GTS gateway.</p>
@@ -763,7 +763,7 @@ During the transition period, in order to avoid some WIS centres being forced to
 <p>Thanks to the gateway functions previously described, WIS centres that currently use the GTS to exchange operational data and that have successfully implemented a WIS2 Node with the additional features required for the gateways to provide the gateway service, will be able to stop their MSS, if they wish to do so, before the end of the complete migration. Gradually stopping of the whole MSS shall be done in an orderly and coordinated manner so that all data required by Members for their operations will continue to be available.</p>
 </div>
 <div class="paragraph">
-<p>Section 6 of the present guide describes the various roles of the GTS (NMC, RTH, World Meteorological Centres (WMC)). It also details when a centre can stop its MSS. When all the conditions for a centre are met, the decommissioning procedure in Figure 2 can be applied.</p>
+<p>Section 6 of the present guide describes the various roles of GTS (NMC, RTH, World Meteorological Centres (WMC)). It also details when a centre can stop its MSS. When all the conditions for a centre are met, the decommissioning procedure in Figure 2 can be applied.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -792,7 +792,7 @@ During the transition period, in order to avoid some WIS centres being forced to
 </div>
 </div>
 <div class="sect1">
-<h2 id="_5_management_of_wis2_and_gts"><a class="anchor" href="#_5_management_of_wis2_and_gts"></a>5. MANAGEMENT OF WIS2 AND GTS</h2>
+<h2 id="_5_management_of_wis1_and_gts"><a class="anchor" href="#_5_management_of_wis1_and_gts"></a>5. MANAGEMENT OF WIS1 AND GTS</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>During the transition to WIS2, maintaining a very high level of service of WIS1 and GTS is key to ensuring that all Members and WIS users can send and receive the data required to run their operations, regardless of whether they have migrated to WIS2 or are still relying on the GTS. As described earlier, the WIS2 to GTS gateway and the GTS to WIS2 gateway will have a key role in this. The present section describes what Members are required to do during this transition, depending on their role within the GTS and WIS1.</p>
@@ -885,7 +885,7 @@ The publication <a href="https://library.wmo.int/idurl/4/55155"><em>Weather Repo
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://library.wmo.int/idurl/4/68731"><em>Manual on the WMO Information System</em></a> (WMO-No. 1060), Volume II</p>
+<p><a href="https://library.wmo.int/idurl/4/68731"><em>Manual on the WMO Information System</em></a> (WMO-No. 1060), Volume II  (the following appendices were adopted in Resolution 15 of the seventy-eighth session of the Executive Council (EC-78) and are available in the 2024 edition of the <em>Manual on the WMO Information System</em>):</p>
 <div class="ulist">
 <ul>
 <li>
@@ -898,7 +898,7 @@ The publication <a href="https://library.wmo.int/idurl/4/55155"><em>Weather Repo
 <p>Appendix F: WMO Core Metadata Profile version 2 (WCMP2)</p>
 </li>
 <li>
-<p>WIS2 Metric Hierarchy (WMH)<sup class="footnote">[<a id="_footnoteref_3" class="footnote" href="#_footnotedef_3" title="View footnote.">3</a>]</sup></p>
+<p>WIS2 Metric Hierarchy (WMH):https://github.com/wmo-im/wis2-metric-hierarchy</p>
 </li>
 </ul>
 </div>
@@ -930,13 +930,10 @@ The publication <a href="https://library.wmo.int/idurl/4/55155"><em>Weather Repo
 <div class="footnote" id="_footnotedef_2">
 <a href="#_footnoteref_2">2</a>. <a href="https://community.wmo.int/governance/commission-membership/infcom" class="bare">https://community.wmo.int/governance/commission-membership/infcom</a>
 </div>
-<div class="footnote" id="_footnotedef_3">
-<a href="#_footnoteref_3">3</a>. <a href="https://github.com/wmo-im/wis2-metric-hierarchy" class="bare">https://github.com/wmo-im/wis2-metric-hierarchy</a>
-</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-13 14:17:10 UTC
+Last updated 2024-09-03 11:35:52 UTC
 </div>
 </div>
 </body>
