main branch is now stable/approved branch

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             <h1>WIS2 Transition Guide</h1>
         </header>
         <section id="transition-guide">
-            <h3>Draft transition guide documents</h3>
+            <h3>Transition guide documents</h3>
             <ul>
-                <li><a href="transition-guide/wis2-transition-guide-DRAFT.html">HTML (online)</a></li>
-                <li><a href="transition-guide/wis2-transition-guide-DRAFT.pdf">PDF</a></li>
-                <li><a href="transition-guide/wis2-transition-guide-DRAFT.docx">Word</a></li>
+                <li><a href="transition-guide/wis2-transition-guide-APPROVED.html">HTML (online)</a></li>
+                <li><a href="transition-guide/wis2-transition-guide-APPROVED.pdf">PDF</a></li>
+                <li><a href="transition-guide/wis2-transition-guide-APPROVED.docx">Word</a></li>
             </ul>
         </section>
         <section id="github">
